# LatticeGillespieCpp

./: CMakeLists.txt  Makefile  README.md  create_data_dirs.py
include/: lattGillespie  lattice_gillespie  lattice_gillespie.hpp
include/lattgillespie_bits/: lattice_gillespie.hpp
include/lattice_gillespie_bits/: lattice_gillespie.hpp
legacy/multiple_occupancy_3d/: gillespie3d.cpp  lattice.hpp  species.hpp
legacy/single_occupancy_2d/: analyze.nb  gillespie2d.cpp  gillespie2d.hpp  latt_0000.txt  main.cpp  main.out
legacy/single_occupancy_3d/: Gillespie_rossler.nb  analyze_annealing.nb  gillespie3d.cpp  gillespie3d.hpp  main.cpp  main.out  tune_probabilities.cpp  tune_probabilities.out
multiple_occupancy_3d/: analyze.nb  gillespie3d.hpp  latt_0000.txt  latt_0001.txt  latt_0002.txt  lattice.cpp  main.cpp  main.out  main_simple.cpp  main_simple.out  reactions.cpp  species.cpp
single_occupancy_1d/: gillespie1d.cpp  gillespie1d.hpp  lattice1d.cpp  lattice1d.hpp  main_annihilation.cpp  reactions.cpp  reactions.hpp  species.cpp  species.hpp
single_occupancy_3d/: Makefile  analyze.nb  gillespie3d.cpp  gillespie3d.hpp  lattice.cpp  lattice.hpp  main.cpp  main.out  main_pre.cpp  main_pre.out  reactions.cpp  species.cpp  species_A.txt  species_B.txt  species_C.txt
single_occupancy_3d/include/: gillespie3d.hpp
single_occupancy_3d/speed/: speed_test.out
single_occupancy_3d/src/: gillespie3d.cpp  lattice.cpp  lattice.hpp  species.cpp
src/: lattice.cpp  lattice.hpp  lattice_gillespie.cpp  reactions.cpp  reactions.hpp  species.cpp  species.hpp
(+3 files in other folders)
